feat: transformer implementation done

--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "66391665-8d20-4a72-9b43-e84d4c32caf8",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "0850ff76-25ac-47f3-b9bc-b4da6e867b60",
    "metadata": {},
    "outputs": [],
@@ -48,16 +48,13 @@
     "    To facilitate these residual connections, all sub-layers in the model (including embedding layer)\n",
     "    produces outputs of dimension d_model = 512\n",
     "    '''\n",
-    "    def __init__(self, d_model=512):\n",
+    "    def __init__(self, vocab_size, d_model=512):\n",
+    "        self.d_model = d_model\n",
+    "        self.embed = Embed(vocab_size, d_model)\n",
+    "        self.positional_encoding = PositionalEncoding(d_model)\n",
+    "        self.multihead = MultiHead(d_model)\n",
+    "        self.feedforward = FeedForward(d_model) \n",
     "        self.layer_norm  = LayerNormalization(d_model)\n",
-    "\n",
-    "    def input_embedding(self, input):\n",
-    "        return Embed().run(input)\n",
-    "                \n",
-    "    def positional_encoding(self, input): ### Not yet described, described in 3.5\n",
-    "        embedded_input = self.input_embedding(input)\n",
-    "        positional_encoded_embedding = PositionalEncoding().run(embedded_input) # will be defined later on.\n",
-    "        return positional_encoded_embedding\n",
     "\n",
     "    def normalized(self, output): ### Not yet described, described in ???\n",
     "        normalized_output = LayerNormalization().run(output) # will be defined later on.\n",
@@ -67,32 +64,26 @@
     "        # in ma_layer, input will be positional_encoded_embedding\n",
     "        # in ff_layer, input will be the output of ma_layer\n",
     "        return self.layer_norm.run(input + layer_output)\n",
-    "\n",
-    "    def multihead_attention(self, input): ### Not yet described, described in 3.2.2\n",
-    "        output = MultiHead().run(input) # will be defined later on.\n",
-    "        return output\n",
-    "\n",
-    "    def feed_forward(self, mh_output): ### Not yet described, described in 3.3\n",
-    "        output = FeedForward().run(mh_output) # will be defined later on \n",
-    "        return output\n",
     "        \n",
-    "    def ma_layer(self, positional_encoded_embedding):\n",
-    "        multihead_attentioned = self.multihead_attention(input_embedding)\n",
-    "        normalized_ouptut = self.add_norm(positional_encoded_embedding, multihead_attentioned)\n",
+    "    def mh_layer(self, input):\n",
+    "        multihead_attentioned = self.multihead.run(input, input, input)\n",
+    "        normalized_ouptut = self.add_norm(input, multihead_attentioned)\n",
     "        return normalized_ouptut\n",
     "        \n",
-    "    def ff_layer(self, ma_layer_output):\n",
-    "        feed_forwarded = self.feed_forward(ma_layer_output)\n",
-    "        layer_norm_ouptut = self.add_norm(ma_layer_output, feed_forwarded)\n",
-    "        return normalized_ouptut\n",
+    "    def ff_layer(self, mh_layer_output):\n",
+    "        feed_forwarded = self.feedforward.run(mh_layer_output)\n",
+    "        layer_norm_ouptut = self.add_norm(mh_layer_output, feed_forwarded)\n",
+    "        return layer_norm_ouptut\n",
     "        \n",
-    "    def run(self, input):\n",
-    "        positional_encoded_embedding = positional_encoding(input)\n",
+    "    def run(self, input_tokens):\n",
+    "        embedded_input = self.embed.token_to_embedding(input_tokens)\n",
+    "        positional_encoded_embedding = self.positional_encoding.run(embedded_input)\n",
+    "        output = positional_encoded_embedding\n",
     "        for _ in range(6):\n",
-    "            ma_layer_output = self.ma_layer(positional_encoded_embedding)\n",
+    "            ma_layer_output = self.mh_layer(output)\n",
     "            ff_layer_output = self.ff_layer(ma_layer_output)\n",
-    "            positional_encoded_embedding = ff_layer_output\n",
-    "        return ff_layer_output"
+    "            output = ff_layer_output\n",
+    "        return output"
    ]
   },
   {
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "839a6eea-4f3e-4382-bc6c-21d324d7a229",
    "metadata": {},
    "outputs": [],
@@ -125,54 +116,48 @@
     "    To facilitate these residual connections, all sub-layers in the model (including embedding layer)\n",
     "    produces outputs of dimension d_model = 512\n",
     "    '''\n",
-    "    def __init__(self, d_model=512):\n",
+    "    def __init__(self, vocab_size, d_model=512):\n",
+    "        self.d_model = d_model\n",
+    "        self.embed = Embed(vocab_size, d_model)\n",
+    "        self.positional_encoding = PositionalEncoding(d_model)\n",
+    "        self.multihead = MultiHead(d_model)\n",
+    "        self.feedforward = FeedForward(d_model) \n",
     "        self.layer_norm = LayerNormalization(d_model)\n",
     "        \n",
-    "    def input_embedding(self, input):\n",
-    "        return Embed().run(input)\n",
-    "                \n",
-    "    def positional_encoding(self, input): ### Not yet described, described in 3.5\n",
-    "        embedded_input = self.input_embedding(input)\n",
-    "        positional_encoded_embedding = PositionalEncoding().run(embedded_input) # will be defined later on.\n",
-    "        return positional_encoded_embedding\n",
-    " \n",
     "    def add_norm(self, input, layer_output): ### Not yet described, described in ???\n",
     "        # in ma_layer, input will be positional_encoded_embedding\n",
     "        # in ff_layer, input will be the output of ma_layer\n",
     "        return self.layer_norm.run(input + layer_output)\n",
-    "\n",
-    "    def multihead_attention(self, masked_ma_layer_output, input): ### Not yet described, described in 3.2.2\n",
-    "        output = MultiHead().run(masked_ma_layer_output, input) # will be defined later on.\n",
-    "        return output\n",
-    "\n",
-    "    def feed_forward(self, mh_output): ### Not yet described, described in 3.3\n",
-    "        output = FeedForward().run(mh_output) # will be defined later on \n",
-    "        return output\n",
     "        \n",
-    "    def masked_ma_layer(positional_encoded_embedding):\n",
-    "        masked_ma = MaskedMultiHeadAttention().run(positional_encoded_embedding)\n",
-    "        normalized_output = add_norm(positional_encoded_embedding, masked_ma)\n",
+    "    def masked_mh_layer(self, input, look_ahead_mask):\n",
+    "        masked_mh = self.multihead.run(input, input, input, look_ahead_mask)\n",
+    "        normalized_output = self.add_norm(input, masked_mh)\n",
     "        return normalized_output\n",
     "    \n",
-    "    def ma_layer(self, masked_ma_layer_output, encoder_output):\n",
-    "        multihead_attentioned = self.multihead_attention(masked_ma_layer_output, encoder_output)\n",
-    "        normalized_ouptut = self.add_norm(masked_ma_layer_output, multihead_attentioned)\n",
+    "    def mh_layer(self, masked_mh_layer_output, encoder_output):\n",
+    "        multihead_attentioned = self.multihead.run(masked_mh_layer_output, encoder_output, encoder_output)\n",
+    "        normalized_ouptut = self.add_norm(masked_mh_layer_output, multihead_attentioned)\n",
     "        return normalized_ouptut\n",
     "        \n",
-    "    def ff_layer(self, ma_layer_output):\n",
-    "        feed_forwarded = self.feed_forward(ma_layer_output)\n",
-    "        normalized_ouptut = self.add_norm(ma_layer_output, feed_forwarded)\n",
+    "    def ff_layer(self, mh_layer_output):\n",
+    "        feed_forwarded = self.feedforward.run(mh_layer_output)\n",
+    "        normalized_ouptut = self.add_norm(mh_layer_output, feed_forwarded)\n",
     "        return normalized_ouptut\n",
     "\n",
-    "    def run(self, input, encoder_output):\n",
-    "        positional_encoded_embedding = positional_encoding(input)\n",
+    "    def run(self, input_tokens, encoder_output):\n",
+    "        size = len(input_tokens)\n",
+    "        look_ahead_mask = create_look_ahead_mask(size)\n",
+    "        \n",
+    "        embedded_input = self.embed.token_to_embedding(input_tokens)\n",
+    "        positional_encoded_embedding = self.positional_encoding.run(embedded_input)\n",
+    "        \n",
     "        for _ in range(6):\n",
-    "            ma_layer_output = self.ma_layer(positional_encoded_embedding)\n",
-    "            ff_layer_output = self.ff_layer(ma_layer_output)\n",
+    "            layer_normed_masked_mh_output = self.masked_mh_layer(positional_encoded_embedding, look_ahead_mask)\n",
+    "            mh_layer_output = self.mh_layer(layer_normed_masked_mh_output, encoder_output)\n",
+    "            ff_layer_output = self.ff_layer(mh_layer_output)\n",
     "            positional_encoded_embedding = ff_layer_output\n",
-    "        return ff_layer_output\n",
-    "\n",
-    "    return normalized_ff_layer_output"
+    "        return positional_encoded_embedding\n",
+    "\n"
    ]
   },
   {
@@ -186,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "c894c105-22a1-4c42-89d9-0cbe18c5da04",
    "metadata": {},
    "outputs": [],
@@ -200,15 +185,18 @@
     "    In practice, we compute the attention function on a set of queries simultaneously, packed together into matrix Q.\n",
     "    The key in matrix K, the value in matrix V.\n",
     "    '''\n",
-    "    def __init__(self, d_k):\n",
+    "    def __init__(self):\n",
     "        pass\n",
     "\n",
     "    def softmax(self, matrix):\n",
     "        e_x = np.exp(matrix - np.max(matrix, axis=-1, keepdims=True))\n",
-    "        return e_x / e_x.sum(e_x, axis=-1, keepdims=True)\n",
+    "        return e_x / e_x.sum(axis=-1, keepdims=True)\n",
     "    \n",
-    "    def run(self, Q, K, V):\n",
-    "        softmaxed = self.softmax(np.matmul(Q, K.T)/np.sqrt(K.shape[1]))\n",
+    "    def run(self, Q, K, V, mask=None):\n",
+    "        matmul_qk = np.matmul(Q, K.T)/np.sqrt(K.shape[1])\n",
+    "        if mask is not None: # added this part after 3.6.2\n",
+    "            matmul_qk += (mask * -1e9)\n",
+    "        softmaxed = self.softmax(matmul_qk)\n",
     "        result = np.matmul(softmaxed, V)\n",
     "        return result"
    ]
@@ -223,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 138,
    "id": "7536c995-b4d8-46f3-adf7-dfca0cae7f66",
    "metadata": {},
    "outputs": [],
@@ -282,11 +270,14 @@
     "\n",
     "        self.attention = ScaledDotProductAttention() # Attention\n",
     "\n",
-    "    def run(self, Q, K, V):\n",
+    "    def run(self, Q, K, V, mask=None):\n",
     "        heads = []\n",
     "        for i in range(self.num_heads):\n",
     "            # split and apply attention to each head\n",
-    "            heads.append(self.attention.run(np.dot(Q * self.wq[i]), np.dot(K * self.wk[i]), np.dot(V * self.wv[i])))\n",
+    "            dot_Q = np.dot(Q, self.wq[i])\n",
+    "            dot_K = np.dot(K, self.wk[i])\n",
+    "            dot_V = np.dot(V, self.wv[i])\n",
+    "            heads.append(self.attention.run(dot_Q, dot_K, dot_V, mask))\n",
     "\n",
     "        # concatenate and apply final linear layer\n",
     "        concatenated = np.concatenate(heads, axis=-1)\n",
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 139,
    "id": "3167368c-41b1-4a15-a450-0d44516f0edd",
    "metadata": {},
    "outputs": [],
@@ -347,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "93470dd5-b920-45af-a195-9de8255e390f",
    "metadata": {},
    "outputs": [],
@@ -367,7 +358,7 @@
     "        probabilities = self.softmax(logits) # Softmax\n",
     "        return probabilities\n",
     "        \n",
-    "    def softmax(self, logtis):\n",
+    "    def softmax(self, logits):\n",
     "        e_x = np.exp(logits - np.max(logits, axis=-1, keepdims=True))\n",
     "        return e_x / e_x.sum(axis=-1, keepdims=True)"
    ]
@@ -382,21 +373,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "bc0e547a-13b5-40f7-aacd-47c2aa039a3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "class PositionalEncoding:\n",
-    "    def __init__ (self, d_model=512):\n",
+    "    def __init__ (self, d_model=512, max_len=512):\n",
     "        self.d_model = d_model\n",
+    "        self.max_len = max_len\n",
     "        \n",
     "    def sin_wave(self, pos, i):\n",
     "        return np.sin(pos/10000 ** (2 * i / self.d_model))\n",
     "\n",
-    "    def cos_wave(self, pos, i)\n",
+    "    def cos_wave(self, pos, i):\n",
     "        return np.cos(pos/10000 ** (2 * i / self.d_model))\n",
-    "        "
+    "\n",
+    "    def run(self, input):\n",
+    "        seq_len = input.shape[0]\n",
+    "        pos_encoding = np.zeros((seq_len, self.d_model))\n",
+    "        for pos in range(seq_len):\n",
+    "            for i in range(0, self.d_model, 2):\n",
+    "                pos_encoding[pos, i] = self.sin_wave(pos, i)\n",
+    "                if i + 1 < self.d_model:\n",
+    "                    pos_encoding[pos, i + 1] = self.cos_wave(pos, i + 1)\n",
+    "\n",
+    "        # pos_encoding = pos_encoding[:seq_len, :]\n",
+    "        return input + pos_encoding#[np.newaxis, :, :]"
    ]
   },
   {
@@ -404,12 +407,13 @@
    "id": "848a905b-1a3c-4cf0-b775-53c8d52e439f",
    "metadata": {},
    "source": [
-    "# Additional - Layer Normalization"
+    "# 3.6 What can be added to complete the Transformer\n",
+    "## 3.6.1 Layer Normalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 154,
    "id": "f44b5061-a804-41e6-95b1-ac18201ba9d2",
    "metadata": {},
    "outputs": [],
@@ -420,7 +424,6 @@
     "        self.gamma = np.ones(d_model)\n",
     "        self.beta = np.zeros(d_model)\n",
     "\n",
-    "\n",
     "    def run(self, x):\n",
     "        mean = np.mean(x, axis=-1, keepdims=True)\n",
     "        variance= np.var(x, axis=-1, keepdims=True)\n",
@@ -429,24 +432,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17ae6762-7401-4b0e-b0f4-999e5615d5bd",
+   "metadata": {},
+   "source": [
+    "## 3.6.2 Mask Generation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
+   "id": "19d5aa5f-9a0a-4755-9c3e-a1ef7d3f2d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_look_ahead_mask(size):\n",
+    "    mask=np.triu(np.ones((size, size)), k=1)\n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22395573-1148-41c6-9e39-0cadd093d7c5",
+   "metadata": {},
+   "source": [
+    "# Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "id": "9cf7b2a9-2a71-4361-a1cb-8b28c07a8580",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Transformer:\n",
-    "    def __init__(self):\n",
-    "        pass"
+    "    def __init__(self, original_text, translated_text, d_model=512):\n",
+    "        splitted_ori = original_text.split()\n",
+    "        splitted_trans = translated_text.split()\n",
+    "        ori_vocab = {}\n",
+    "        for idx, word in enumerate(splitted_ori):\n",
+    "            if word not in ori_vocab.keys():\n",
+    "                ori_vocab[word] = idx\n",
+    "        trans_vocab = {}\n",
+    "        for idx, word in enumerate(splitted_trans):\n",
+    "            if word not in trans_vocab.keys():\n",
+    "                trans_vocab[word] = idx\n",
+    "        self.ori_token_id = [ori_vocab[word] for word in splitted_ori]\n",
+    "        self.trans_token_id = [trans_vocab[word] for word in splitted_trans]\n",
+    "        ori_vocab_size = len(splitted_ori)\n",
+    "        trans_vocab_size = len(splitted_trans)        \n",
+    "        self.encoder = Encoder(vocab_size=ori_vocab_size)\n",
+    "        self.decoder = Decoder(vocab_size=trans_vocab_size)\n",
+    "        self.embed = Embed(vocab_size=trans_vocab_size, d_model=d_model)\n",
+    "\n",
+    "    def run(self):\n",
+    "        encoder_output = self.encoder.run(self.ori_token_id)\n",
+    "        decoder_output = self.decoder.run(self.trans_token_id, encoder_output)\n",
+    "        final_embedding = self.embed.output_to_probabilities(decoder_output)\n",
+    "        return final_embedding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "7a0e2e23-f05d-4671-a4a9-87c98fce508f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.17776883, 0.29506878, 0.52716239],\n",
+       "       [0.17776883, 0.29506878, 0.52716239],\n",
+       "       [0.17776883, 0.29506878, 0.52716239]])"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_text = \"I am so hungry\"\n",
+    "translated_text = \"tengo mucha hambre\"\n",
+    "transformer = Transformer(original_text, translated_text)\n",
+    "transformer.run()"
+   ]
   }
  ],
  "metadata": {
