feat: updated note for Transformer implementation

--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -460,6 +460,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3d15cf0-8584-4c18-ab79-703ef8268189",
+   "metadata": {},
+   "source": [
+    "For the token_ids, I have simply used index of each word in the sentences.<br>\n",
+    "Tokenizer will be implemented in different notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 156,
    "id": "9cf7b2a9-2a71-4361-a1cb-8b28c07a8580",
