feat: updated some other languages as out examples

--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -504,19 +504,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 158,
    "id": "7a0e2e23-f05d-4671-a4a9-87c98fce508f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.17776883, 0.29506878, 0.52716239],\n",
-       "       [0.17776883, 0.29506878, 0.52716239],\n",
-       "       [0.17776883, 0.29506878, 0.52716239]])"
+       "array([[0.07658122, 0.39176381, 0.23111772, 0.30053725],\n",
+       "       [0.07658122, 0.39176381, 0.23111772, 0.30053725],\n",
+       "       [0.07658122, 0.39176381, 0.23111772, 0.30053725],\n",
+       "       [0.07658122, 0.39176381, 0.23111772, 0.30053725]])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_text = \"I am so hungry\"\n",
+    "translated_text = \"나는 너무 배가 고프다\"\n",
+    "transformer = Transformer(original_text, translated_text)\n",
+    "transformer.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "b5b6f249-d3b4-4b7d-a469-ebf578490fe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.16249228, 0.60308414, 0.23442357],\n",
+       "       [0.16249228, 0.60308414, 0.23442357],\n",
+       "       [0.16249228, 0.60308414, 0.23442357]])"
+      ]
+     },
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,6 +554,40 @@
     "transformer = Transformer(original_text, translated_text)\n",
     "transformer.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "c76e649c-af58-409b-a74b-3841cc7cdfa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.17070206, 0.15619766, 0.67310027],\n",
+       "       [0.17070206, 0.15619766, 0.67310027],\n",
+       "       [0.17070206, 0.15619766, 0.67310027]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_text = \"I am so hungry\"\n",
+    "translated_text = \"j'ai tres faim\"\n",
+    "transformer = Transformer(original_text, translated_text)\n",
+    "transformer.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "562e6d7f-961c-4bca-adc2-04f29bb625b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
