feat: updated Pr Pg

--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -210,9 +210,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41e944f3-58ff-4366-84dd-de3a96fd6523",
+   "metadata": {},
+   "source": [
+    "# Mathematical Analysis of Learning in the Perception"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0bec8bb-166e-4a47-a16b-13060f092fea",
+   "metadata": {},
+   "source": [
+    "Probability that the perceptron will show a bias towards the \"correct\" response in preference is called $P_r$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa2c9b9-a1e3-45c9-b2f1-f71dfe5fc947",
+   "metadata": {},
+   "source": [
+    "Probability that the perceptron will give the correct response for the class of stimuli which is represented.<Br>This probability is called $P_g$, the probability of correct generalization.<br>\n",
+    "$$P = P(N_{a_{r}} > 0) \\cdot \\phi(Z)$$\n",
+    "$$where$$\n",
+    "$$P(N_{a_{r}} > 0) = 1 - (1 - P_{a})^{N_{c}}$$\n",
+    "<div align = \"center\">\n",
+    "    $\\phi (Z)$ = normal curve integral from $-\\infty$ to $Z$\n",
+    "</div>\n",
+    "$$and$$\n",
+    "$$\n",
+    "Z=\\frac{c_1n_{s_{r}} + c_{2}}{\\sqrt{{c_3n_{s_{r}}}^2 + c_4n_{s_{r}}}}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e719274-8257-4ea5-9758-a3e9f12f1fe7",
+   "id": "ff8fe065-578e-4701-8b0a-0ea65747f261",
    "metadata": {},
    "outputs": [],
    "source": []
