feat: updated Pr Pg

--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -245,8 +245,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ff8fe065-578e-4701-8b0a-0ea65747f261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "def calculate_P(Nc, Pa, c1, c2, c3, c4, nsr):\n",
+    "    P_Nar_greater_than_0 = 1 - (1 - Pa) ** Nc\n",
+    "    Z = (c1 * nsr + c2) / np.sqrt((c3 * nsr) ** 2 + c4 * nsr)\n",
+    "    phi_Z = norm.cdf(Z)\n",
+    "\n",
+    "    P = P_Nar_greater_than_0 * phi_Z\n",
+    "    return P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "487881a1-a33c-43bd-aa91-dea65312498e",
    "metadata": {},
    "outputs": [],
    "source": []
