feat: updated ipynb

--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -262,9 +262,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70080381-edf4-4e56-bbd8-05029c12e9e1",
+   "metadata": {},
+   "source": [
+    "In ideal environment, consisting of randomly placed points of illumination, where there is no attempt to classify stimuli according to intrinsic similarity.<br>\n",
+    "Thus, in a typical learning experiment, we might show the perceptron 1,000 stimuli made up of random collections of illuminated retinal points,<br>and we might arbitrarily reinforce $R_{1}$ as the \"correct\" response for the first 500 of these, and $R_{2}$ for the first 500.<br><br>\n",
+    "This environment is \"ideal\" only in the sense that we speak of an ideal gas in physics; it is a convenient artifact for purposes of analysis, and does not lead to the best performance from the perceptron.<br>\n",
+    "In the ideal environment situation, the constant $c_{1}$ is always equal to zero, so that, in the case of $P_{g}$ (where $c_{2}$ is also zero), the value of $Z$ will be zero, and $P_{g}$ can never be any better than the random expectation of 0.5.<br>\n",
+    "The evaluation of $P_{r}$ for these conditions, however, throws some interesting light on the differences between the alpha, beta, and gamma systems.<br><br>\n",
+    "First consider the alpha system, which has the simplest dynamics of the three.<br>\n",
+    "In this system, whenever an A-unit is active for one unit of time, it gains one unit of value.<br>\n",
+    "We will assume an experiment, initially, in which $N_{a_{r}}$ (the number of stimuli associated to each response) is constant for all responses.<br>\n",
+    "In this case, for the sum system,<br>\n",
+    "\n",
+    "\\begin{cases} \n",
+    "    c_1 = 0 \\\\\n",
+    "    c_2 = (1-P_a)N_e \\\\\n",
+    "    c_3 = 2P_aw \\\\\n",
+    "    c_4 \\approx 0 \\\\\n",
+    "\\end{cases}\n",
+    "\n",
+    "where $w = $ the fraction of responses connected to each A-unit.<br>If the source-sets are disjunct, $w = 1 / N_{R},$ where $N_{R}$ is the number of responses in the system.<br>\n",
+    "For the $\\mu$-system,<br>\n",
+    "\n",
+    "\\begin{cases} \n",
+    "    c_1 = 0 \\\\\n",
+    "    c_2 = (1-P_a)N_e \\\\\n",
+    "    c_3 = 0 \\\\\n",
+    "    c_4 = 2w \\\\\n",
+    "\\end{cases}\n",
+    "\n",
+    "The reduction of $c_2$ to zero gives the $\\mu$-system a definite advantage over the $\\Sigma$-system.<br>\n",
+    "<br> if $n_{a_r}$ instead of being fixed, is treated as a random variable, so that the number of stimuli associated to each response is drawn separately from some distribution, then the performance of the $\\alpha$-system is considerably poorer than the above eqquations indicate.<br>\n",
+    "Under these conditions, the constants for the $\\mu$-system are\n",
+    "\n",
+    "\\begin{cases} \n",
+    "    c_1 = 0 \\\\\n",
+    "    c_2 = 1-P_a \\\\\n",
+    "    c_3 = 2{P_{a}}^{2}{q}^2 [\\frac{(wN_{R}-1)^2}{N_{R}-2}] \\\\\n",
+    "    c_4 = \\frac{2(1-P_a)N_{R}}{(1-w_c)N_{A}} \\\\\n",
+    "\\end{cases}\n",
+    "\n",
+    "$where$\n",
+    "<div align=\"center\">\n",
+    "    <p align=\"left\">\n",
+    "        $q =$ ratio of $\\sigma_{n_{S_r{r}}}$ to $\\overleftrightarrow{n}_{S_r}$<br>\n",
+    "        $N_R = $ number of responses in the system<br>\n",
+    "        $N_A = $ number of A-units in the system<br>\n",
+    "        $w_c = $ proportion of A-units common to $R_1$ and $R_2$<br>\n",
+    "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "487881a1-a33c-43bd-aa91-dea65312498e",
+   "id": "b5ba2900-3282-4ae4-a824-967e2a7b74e3",
    "metadata": {},
    "outputs": [],
    "source": []
