feat: updated ipynb

--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -271,7 +271,7 @@
     "This environment is \"ideal\" only in the sense that we speak of an ideal gas in physics; it is a convenient artifact for purposes of analysis, and does not lead to the best performance from the perceptron.<br>\n",
     "In the ideal environment situation, the constant $c_{1}$ is always equal to zero, so that, in the case of $P_{g}$ (where $c_{2}$ is also zero), the value of $Z$ will be zero, and $P_{g}$ can never be any better than the random expectation of 0.5.<br>\n",
     "The evaluation of $P_{r}$ for these conditions, however, throws some interesting light on the differences between the alpha, beta, and gamma systems.<br><br>\n",
-    "First consider the alpha system, which has the simplest dynamics of the three.<br>\n",
+    "**First consider the $\\alpha$-system**, which has the simplest dynamics of the three.<br>\n",
     "In this system, whenever an A-unit is active for one unit of time, it gains one unit of value.<br>\n",
     "We will assume an experiment, initially, in which $N_{a_{r}}$ (the number of stimuli associated to each response) is constant for all responses.<br>\n",
     "In this case, for the sum system,<br>\n",
@@ -312,7 +312,21 @@
     "        $N_A = $ number of A-units in the system<br>\n",
     "        $w_c = $ proportion of A-units common to $R_1$ and $R_2$<br>\n",
     "    </p>\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "For this equation (and any others in which $n_{s_r}$ is treated as a random variable), it is necessary to define $n_{s_r}$ in the equation above (in `calculate_P`) as the expected value of this variable, over the set of all responses.<br><br>\n",
+    "\n",
+    "For the $\\beta$-system, there is an even greater deficit in performance, due to the fact that the net value continues to grow regardless of what happens to the system.<br>\n",
+    "The large net values of the subsets activated by a stimulus tend to amplilfy small statistical differences, causing an unreliable performance.<br>\n",
+    "The constants in this case (again for the $\\mu$-system) are\n",
+    "\\begin{cases} \n",
+    "    c_1 = 0 \\\\\n",
+    "    c_2 = (1-P_a)N_e \\\\\n",
+    "    c_3 = 2(P_aN_eqw{N_{R}}^2)^2 \\\\\n",
+    "    c_4 = 2(1 - P_a)wN_{R}N_e \\\\\n",
+    "\\end{cases}\n",
+    "In both the $\\alpha$ and $\\beta$ systems, performance will be poorer for the sum-discriminating model than for the mean-discriminating case.<br>\n",
+    "In the $\\gamma$-system"
    ]
   },
   {
