feat: udpated ipynb

--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -325,8 +325,9 @@
     "    c_3 = 2(P_aN_eqw{N_{R}}^2)^2 \\\\\n",
     "    c_4 = 2(1 - P_a)wN_{R}N_e \\\\\n",
     "\\end{cases}\n",
-    "In both the $\\alpha$ and $\\beta$ systems, performance will be poorer for the sum-discriminating model than for the mean-discriminating case.<br>\n",
-    "In the $\\gamma$-system"
+    "In both the $\\alpha$ and $\\beta$ systems, performance will be poorer for the sum-discriminating model than for the mean-discriminating case.<br><br>\n",
+    "In the $\\gamma$-system, however, it can be shown that $P_{r(\\Sigma)} = P_{r(\\mu)}$; i.e., it makes no difference in performance whether the $\\Sigma$-system or $\\mu$-system is used.<br>\n",
+    "Moreover, the constants for the $\\gamma$-system, with variable $n_{s_r}$ are identical to the constants for the alpha $\\mu$-system, with $n_{s_{r}}$ fixed."
    ]
   },
   {
