feat: updated ipynb

--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -331,9 +331,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c408967b-66f8-41d2-8415-38843b4798e7",
+   "metadata": {},
+   "source": [
+    "Replacing the \"Ideal environment\" assumptions with a model for a \"differentiated environment\" in which several distinguishable classes of stimuli are present.<br>\n",
+    "If we then design an experiment in which the stimuli associated to each response are drawn from a different class, then the learning curves of the perceptron are drastically altered.<br>\n",
+    "The most important difference is that the constant $c_1$ (the coefficient of $n_{s_r}$ in the numerator of $Z$) is no longer equal to zero,<br>so that the equation now has a non random asymtote (the probability of correct generalization), where $c_2 = 0$, the quantity $Z$ remains greater than zero, and $P_g$ actually approaches the same asymtote as $P_r$.<br>\n",
+    "Thus the equation for the perceptron's performance after infinite experience with each class of stimuli is identical for $P_r$ and $P_g$:\n",
+    "$$\n",
+    "P_{r_\\infty} = P_{g_\\infty} = [1-(1-P_a)^{N_e}] \\times \\phi (\\frac{c_1}{\\sqrt{c_3}})\n",
+    "$$\n",
+    "This means that in the limit it makes no difference whether the perceptron has seen a particular test stimulus before or not;<br>if the stimuli are drawn from a differentiated environment, the performance will be equally good in either case."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ba2900-3282-4ae4-a824-967e2a7b74e3",
+   "id": "aa79d0ad-5315-48c3-ab8c-82926ee30cc1",
    "metadata": {},
    "outputs": [],
    "source": []
