--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -90,7 +90,7 @@
     "\\begin{aligned}\n",
     "    &P(e,i,l_{e}, l_{i}, g_{e}, g_{i})\\\\\n",
     "    &=\\binom{x}{e} R^{e}(1 - R)^{x - e} \\\\\n",
-    "    &\\times\\binom{y}{i} R^{i}(1 - R)^{y - i} \\\\\n",
+    "    &\\times \\binom{y}{i} R^{i}(1 - R)^{y - i} \\\\\n",
     "    &\\times \\binom{e}{l_{e}} L^{l_{e}}(1-L)^{e - l_{e}} \\\\\n",
     "    &\\times \\binom{i}{l_{i}} L^{l_{i}}(1-L)^{i - l_{i}} \\\\\n",
     "    &\\times \\binom{x - e}{g_{e}} G^{g_{e}}(1-G)^{x - e - g_{e}} \\\\\n",
@@ -349,6 +349,77 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "aa79d0ad-5315-48c3-ab8c-82926ee30cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P_inf(P_a, N_e, c_1, c_3):\n",
+    "    term1 = 1- (1-P_a)**N_e\n",
+    "    Z = c_1 / np.sqrt(c_3)\n",
+    "    phi_Z = norm.cdf(Z)\n",
+    "    return term1 * phi_Z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8737fc4-524f-47c0-9400-1e4917ef502a",
+   "metadata": {},
+   "source": [
+    "The equation for $P_r$, for the sum-discriminating version of an $\\alpha$-perceptron, in a differentiated environment where $n_{s_r}$ is fixed for all responses, will have the following expressions for the four coefficients:\n",
+    "\\begin{cases} \n",
+    "c_1 = P_aN_e(P_{c11} - P_{c12}) \\\\\n",
+    "c_2 = P_aN_e(1-P_{c11}) \\\\\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    c_3 &= \\sum_{r=1,2} P_a (1 - P_a) N_e\\\\\n",
+    "    &\\times \\left[ P_{c1_r}^2 + \\sigma_3^2(P_{c1_r}) \\right. \\\\\n",
+    "    &\\quad + \\sigma_j^2(P_{c1r} + (wN_{R} - 1)^2) \\\\\n",
+    "    &\\quad \\times (P_{c1_x} + \\sigma_S^2 (P_{c1_x}) \\\\\n",
+    "    &\\quad + \\sigma_j^2(P_{c_{rx}})) + 2(wN_{R} - 1) \\\\\n",
+    "    &\\quad \\left. (P_{c1_r}P_{c1_x}) \\right] + P_a^2 N_e^2 \\\\\n",
+    "    &\\quad \\times \\left[ \\sigma_S^2(P_{c1_r}) + (wN_{R} - 1)^2 \\right. \\\\\n",
+    "    &\\quad \\times \\sigma_S^2(P_{c1_r}) + (wN_{R} - 1)^2 \\\\\n",
+    "    &\\quad \\left. \\times \\sigma_S^2(P_{c1_x}) + 2(wN_{R} - 1) \\epsilon \\right] \\\\\n",
+    "    c_4 &= \\sum_{r=1,2} P_a N_e \\left[ P_{c1_r} - P_{c1_r}^2 \\right. \\\\\n",
+    "    &\\quad - \\sigma_S^2(P_{c1_r}) - \\sigma_j^2(P_{c1_r}) \\\\\n",
+    "    &\\quad \\left. + (wN_R - 1)(P_{c1_x} - P_{c1_x}^2 - \\sigma_j^2(P_{c1_x})) \\right]\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\\end{cases}\n",
+    "\n",
+    "$where$<br>\n",
+    "$\\sigma_S^2(P_{c1_r})$ and $\\sigma_S^2(P_{c1_x})$ represent the variance of $P_{c1_r}$ and $P_{c1_x}$ measured over the set of possible test stimuli, $S_t$<br>$\\sigma_j^2(P_{c1_r}$ and $\\sigma_j^2(P_{c1_x})$ represent the variance of $P_{c1_r}$ and $P_{c1_x}$ measured over the set of all A-units, $a_j$.<br>\n",
+    "$\\epsilon = $ covariance of $P_{c1_r}P_{c1_x}$, which is assumed to be negligible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fffa4007-7569-45ee-bd9c-da9171328b56",
+   "metadata": {},
+   "source": [
+    "For the mean-discriminating system, the coefficients are:\n",
+    "\n",
+    "\\begin{cases} \n",
+    "c_1 = (P_{c11} - P_{c12}) \\\\\n",
+    "c_2 = (1-P_{c11}) \\\\\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    c_3 &= \\sum_{r=1,2} \\left[ \\frac{1}{P_a (N_e - 1)} - \\frac{1}{N_e - 1} \\right] \\\\\n",
+    "    &\\quad \\times \\left[ \\sigma_j^2(P_{c1_r}) + (wN_{R} - 1)^2 \\\\\n",
+    "    \\times \\sigma_j^2(P_{c1_r}) \\right]\\\\\n",
+    "    &\\quad + \\left[ \\sigma_S^2(P_{c1_r}) + (wN_{R} - 1)^2\n",
+    "    \\sigma_S^2(P_{c1_x}) \\right] \\\\\n",
+    "    c_4 &= \\sum_{r=1,2} \\frac{1}{P_a N_e} \\left[ P_{c1_r} - P_{c1_r}^2 - \\sigma_S^2(P_{c1_r}) - \\sigma_j^2(P_{c1_r}) \\right. \\\\\n",
+    "    &\\quad + (wN_R - 1)\\left(P_{c1_x} - P_{c1_x}^2 - \\sigma_S^2\n",
+    "    (P_{c1_x}) - \\sigma_j^2(P_{c1_x}) \\right) \\Bigg]\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\\end{cases}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4f7b12d-2e85-47be-9547-44a8cb1de868",
    "metadata": {},
    "outputs": [],
    "source": []
